fix(index.html): alignment

--- a/asset/main.css
+++ b/asset/main.css
@@ -32,7 +32,7 @@ h2 {
 
 .logo-clbs-io {
   aspect-ratio: auto;
-  width: 70%;
+  width: 50%;
 }
 
 h3 {
